# fastapi

./: Pipfile  main.py  pyproject.toml
public/: index.html
public/img/: styles.css
