[tool.poetry]
name = "fastapi"
version = "0.1.0"
description = ""
authors = ["leeminseo125 <dlalstj46@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyproject-toml = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
